# AstralArchives

./: .gitignore  LICENSE  RAGCUI.py  README.md  auto_build.py  auto_run.py  client.py  devCUI.py  llm_api.py  main.py  pyproject.toml  requirements.txt  server.py  typescript  uv.toml
config/: api_keys.template.json  apikey_db.py  categories.json  categories.template.json  prompts.json
crawler/: __init__.py  crawl_main.py  run.py
datacleaner/: base.py  character.py  clean_main.py  lightcone.py  mission.py
rag/: __init__.py  db.py  llm.py  rag_service.py  utils.py
ui/: __init__.py  category_manage_view.py  clean_data_view.py  config_view.py  crawl_view.py  embed_data_view.py  main_menu.py  readme_view.py  search_view.py
vector_api/: __init__.py  async_utils.py  embed_utils.py  embedding.py  faiss_utils.py  main_embedding.py  slice_utils.py  storage_utils.py
